@@ -7,8 +7,8 @@ android {
         applicationId "com.tmendes.birthdaydroid"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 30
-        versionName '20191221_VC30'
+        versionCode 31
+        versionName '20200106_VC31'
     }
     buildTypes {
         release {
